# ros2_openmp

./: CMakeLists.txt  README.md  package.xml
src/: openmp_gpu_node.cpp
